Rename lesson, reorganize data

--- a/Lesson 00 Course Overview.ipynb
+++ b/Lesson 00 Course Overview.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 0. Introduction"
+    "# Lesson 0. Course Overview"
    ]
   },
   {
@@ -79,12 +79,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-f19f14849c524b5db84203bbb6329557\"></div>\n",
+       "<div id=\"altair-viz-6ee966157d7d45bfafb092814e5a49cc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f19f14849c524b5db84203bbb6329557\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f19f14849c524b5db84203bbb6329557\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6ee966157d7d45bfafb092814e5a49cc\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6ee966157d7d45bfafb092814e5a49cc\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -126,7 +126,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"axis\": {\"title\": null}, \"title\": {\"anchor\": \"middle\", \"fontSize\": 16, \"offset\": 20}}, \"data\": {\"url\": \"covid_us_by_state.csv\"}, \"facet\": {\"type\": \"nominal\", \"field\": \"state\", \"header\": {\"title\": null}}, \"spec\": {\"layer\": [{\"mark\": {\"type\": \"bar\", \"color\": \"pink\"}, \"encoding\": {\"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\", \"title\": \"Date\"}, {\"type\": \"quantitative\", \"field\": \"daily_cases\", \"title\": \"New cases\"}, {\"type\": \"quantitative\", \"field\": \"daily_cases_per_capita\", \"title\": \"New cases per 100,000\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"daily_cases_per_capita\"}}, \"height\": 100, \"width\": 100}, {\"mark\": {\"type\": \"line\", \"color\": \"red\", \"size\": 1}, \"encoding\": {\"x\": {\"type\": \"temporal\", \"field\": \"date\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"rolling_avg\"}}, \"transform\": [{\"window\": [{\"op\": \"mean\", \"field\": \"daily_cases_per_capita\", \"as\": \"rolling_avg\"}], \"frame\": [-7, 0], \"groupby\": [\"state\"]}]}]}, \"columns\": 5, \"title\": \"Daily new cases per 100,000\", \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\"}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"axis\": {\"title\": null}, \"title\": {\"anchor\": \"middle\", \"fontSize\": 16, \"offset\": 20}}, \"data\": {\"url\": \"data/covid_us_by_state.csv\"}, \"facet\": {\"type\": \"nominal\", \"field\": \"state\", \"header\": {\"title\": null}}, \"spec\": {\"layer\": [{\"mark\": {\"type\": \"bar\", \"color\": \"pink\"}, \"encoding\": {\"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\", \"title\": \"Date\"}, {\"type\": \"quantitative\", \"field\": \"daily_cases\", \"title\": \"New cases\"}, {\"type\": \"quantitative\", \"field\": \"daily_cases_per_capita\", \"title\": \"New cases per 100,000\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"daily_cases_per_capita\"}}, \"height\": 100, \"width\": 100}, {\"mark\": {\"type\": \"line\", \"color\": \"red\", \"size\": 1}, \"encoding\": {\"x\": {\"type\": \"temporal\", \"field\": \"date\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"rolling_avg\"}}, \"transform\": [{\"window\": [{\"op\": \"mean\", \"field\": \"daily_cases_per_capita\", \"as\": \"rolling_avg\"}], \"frame\": [-7, 0], \"groupby\": [\"state\"]}]}]}, \"columns\": 5, \"title\": \"Daily new cases per 100,000\", \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\"}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -141,7 +141,7 @@
    "source": [
     "import altair as alt\n",
     "\n",
-    "data_url = 'covid_us_by_state.csv'\n",
+    "data_url = 'data/covid_us_by_state.csv'\n",
     "\n",
     "daily_per_capita = alt.Chart(data_url).mark_bar(\n",
     "    color='pink'\n",
@@ -201,12 +201,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3509d30c75b14caa99f152d735160093\"></div>\n",
+       "<div id=\"altair-viz-471777af52674125a0ae7855659f19b7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3509d30c75b14caa99f152d735160093\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3509d30c75b14caa99f152d735160093\");\n",
+       "    if (outputDiv.id !== \"altair-viz-471777af52674125a0ae7855659f19b7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-471777af52674125a0ae7855659f19b7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -248,7 +248,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"title\": {\"anchor\": \"middle\", \"fontSize\": 16, \"offset\": 20}}, \"data\": {\"url\": \"https://vega.github.io/vega-datasets/data/us-10m.json\", \"format\": {\"feature\": \"counties\", \"type\": \"topojson\"}}, \"mark\": \"geoshape\", \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"weekly_cases_per_capita\", \"scale\": {\"scheme\": \"yelloworangered\", \"type\": \"sqrt\"}, \"title\": null}, \"tooltip\": [{\"type\": \"nominal\", \"field\": \"state\", \"title\": \"State\"}, {\"type\": \"nominal\", \"field\": \"county\", \"title\": \"County\"}, {\"type\": \"quantitative\", \"field\": \"weekly_cases_per_capita\", \"title\": \"New cases per 100,000 in the last week\"}]}, \"height\": 400, \"projection\": {\"type\": \"albersUsa\"}, \"title\": \"New cases per 100,000 in the week of 6 July 2020\", \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"url\": \"covid_us_06jul2020.csv\"}, \"key\": \"county_fips\", \"fields\": [\"state\", \"county\", \"weekly_cases_per_capita\"]}}], \"width\": 600, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\"}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"title\": {\"anchor\": \"middle\", \"fontSize\": 16, \"offset\": 20}}, \"data\": {\"url\": \"https://vega.github.io/vega-datasets/data/us-10m.json\", \"format\": {\"feature\": \"counties\", \"type\": \"topojson\"}}, \"mark\": \"geoshape\", \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"weekly_cases_per_capita\", \"scale\": {\"scheme\": \"yelloworangered\", \"type\": \"sqrt\"}, \"title\": null}, \"tooltip\": [{\"type\": \"nominal\", \"field\": \"state\", \"title\": \"State\"}, {\"type\": \"nominal\", \"field\": \"county\", \"title\": \"County\"}, {\"type\": \"quantitative\", \"field\": \"weekly_cases_per_capita\", \"title\": \"New cases per 100,000 in the last week\"}]}, \"height\": 400, \"projection\": {\"type\": \"albersUsa\"}, \"title\": \"New cases per 100,000 in the week of 6 July 2020\", \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"url\": \"data/covid_us_06jul2020.csv\"}, \"key\": \"county_fips\", \"fields\": [\"state\", \"county\", \"weekly_cases_per_capita\"]}}], \"width\": 600, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\"}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -264,7 +264,7 @@
     "import vega_datasets\n",
     "\n",
     "counties = alt.topo_feature(vega_datasets.data.us_10m.url, 'counties')\n",
-    "data_url = 'covid_us_06jul2020.csv'\n",
+    "data_url = 'data/covid_us_06jul2020.csv'\n",
     "\n",
     "alt.Chart(counties).mark_geoshape().encode(\n",
     "    alt.Color('weekly_cases_per_capita:Q',\n",
