--- a/Lesson 00 Course Overview.ipynb
+++ b/Lesson 00 Course Overview.ipynb
@@ -79,12 +79,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-6ee966157d7d45bfafb092814e5a49cc\"></div>\n",
+       "<div id=\"altair-viz-55ba9c5d51354b31b5df89916902e461\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-6ee966157d7d45bfafb092814e5a49cc\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-6ee966157d7d45bfafb092814e5a49cc\");\n",
+       "    if (outputDiv.id !== \"altair-viz-55ba9c5d51354b31b5df89916902e461\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-55ba9c5d51354b31b5df89916902e461\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -201,12 +201,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-471777af52674125a0ae7855659f19b7\"></div>\n",
+       "<div id=\"altair-viz-77fc689cbc7c445ebe09896fbc778a2b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-471777af52674125a0ae7855659f19b7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-471777af52674125a0ae7855659f19b7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-77fc689cbc7c445ebe09896fbc778a2b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-77fc689cbc7c445ebe09896fbc778a2b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -261,9 +261,10 @@
     }
    ],
    "source": [
-    "import vega_datasets\n",
+    "import altair as alt\n",
+    "import vega_datasets as vega\n",
     "\n",
-    "counties = alt.topo_feature(vega_datasets.data.us_10m.url, 'counties')\n",
+    "counties = alt.topo_feature(vega.data.us_10m.url, 'counties')\n",
     "data_url = 'data/covid_us_06jul2020.csv'\n",
     "\n",
     "alt.Chart(counties).mark_geoshape().encode(\n",
@@ -314,12 +315,186 @@
    "metadata": {},
    "source": [
     "- **Data wrangling** (sometimes called **data munging**) is the act of transforming or manipulating data into the right form you need for analysis\n",
-    "    - For example, the visualizations above required data to be in a particular form\n",
     "\n",
     "\n",
     "- This might involve filtering or rearranging data, creating new data based on the existing data, or merging different data sets together\n",
     "\n",
     "\n",
+    "- For example, the map chart above (known as a [**chloropleth map**](https://en.wikipedia.org/wiki/Choropleth_map)) is based on the following data set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county_fips</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>total_deaths</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>state</th>\n",
+       "      <th>county</th>\n",
+       "      <th>population</th>\n",
+       "      <th>weekly_cases</th>\n",
+       "      <th>weekly_cases_per_capita</th>\n",
+       "      <th>total_cases_per_capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>2020-07-06</td>\n",
+       "      <td>618.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>32.53</td>\n",
+       "      <td>-86.65</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>55869.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>162.88</td>\n",
+       "      <td>1106.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>2020-07-06</td>\n",
+       "      <td>911.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.66</td>\n",
+       "      <td>-87.75</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>223234.0</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>120.05</td>\n",
+       "      <td>408.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>2020-07-06</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>31.87</td>\n",
+       "      <td>-85.41</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barbour County</td>\n",
+       "      <td>24686.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>137.73</td>\n",
+       "      <td>1442.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1007</td>\n",
+       "      <td>2020-07-06</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33.02</td>\n",
+       "      <td>-87.13</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Bibb County</td>\n",
+       "      <td>22394.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>142.90</td>\n",
+       "      <td>879.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1009</td>\n",
+       "      <td>2020-07-06</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33.98</td>\n",
+       "      <td>-86.57</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Blount County</td>\n",
+       "      <td>57826.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>83.01</td>\n",
+       "      <td>427.14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   county_fips        date  total_cases  total_deaths  latitude  longitude  \\\n",
+       "0         1001  2020-07-06        618.0          13.0     32.53     -86.65   \n",
+       "1         1003  2020-07-06        911.0          10.0     30.66     -87.75   \n",
+       "2         1005  2020-07-06        356.0           2.0     31.87     -85.41   \n",
+       "3         1007  2020-07-06        197.0           1.0     33.02     -87.13   \n",
+       "4         1009  2020-07-06        247.0           1.0     33.98     -86.57   \n",
+       "\n",
+       "     state          county  population  weekly_cases  weekly_cases_per_capita  \\\n",
+       "0  Alabama  Autauga County     55869.0          91.0                   162.88   \n",
+       "1  Alabama  Baldwin County    223234.0         268.0                   120.05   \n",
+       "2  Alabama  Barbour County     24686.0          34.0                   137.73   \n",
+       "3  Alabama     Bibb County     22394.0          32.0                   142.90   \n",
+       "4  Alabama   Blount County     57826.0          48.0                    83.01   \n",
+       "\n",
+       "   total_cases_per_capita  \n",
+       "0                 1106.16  \n",
+       "1                  408.09  \n",
+       "2                 1442.11  \n",
+       "3                  879.70  \n",
+       "4                  427.14  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/covid_us_06jul2020.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unfortunately, there is no ready-made data set out there that looks like this one!\n",
+    "\n",
+    "\n",
+    "- The data for the above visualizations came from 4 different data sets, managed by different parties\n",
+    "\n",
+    "\n",
+    "- The data was merged and transformed into the particular form that Altair required"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Data wrangling isn't glamorous, but it is very necessary!\n",
     "    - Real data sets, unlike the data sets you often encounter in class, are messy\n",
     "    - It's pretty common to spend more time on wrangling data than data analysis!\n",
